users_private: Do not use profile for other users

GetProfileByUser() will return null for a non logged in user, so do not
use IsOwnerProfile() to set is_owner.

This also fixes behavior in ChromeUserManagerImpl where the active user
was not correctly set as the owner when kStubCrosSettings is set
because UserManagerBase::UserLoggedIn is calling
RegularUserLoggedInAsEphemeral() instead of RegularUserLoggedIn() for
non owners, and the logic to set the user as the owner was in
RegularUserLoggedIn().

Bug: 856441
Change-Id: I085d46accb3c97c1b6ee5615b838a5de796e3f8b
Reviewed-on: https://chromium-review.googlesource.com/1118921
Commit-Queue: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Alexander Alekseev <alemate@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571341}
Former-commit-id: ef47cfb48bba0688ced57d91b1059f03dc82b99a